Fixes issue 8858: Back button is too small
--HG--
extra : convert_revision : svn%3A237dfc2b-7c0e-0410-bfc4-b1bdb0875535/trunk%40610

--- a/web/layout.css
+++ b/web/layout.css
@@ -55,11 +55,14 @@
   }
 
   img.back {
-      height:20px;
+      height:40px;
+      width:40px;
       padding-top:3px;
       padding-left:20px;
       padding-right:10px;
       border:none;
+      vertical-align:middle;
+      
   }
 
 a {
